--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
   padding: 2%;
   padding: 10px;
   box-shadow: 4px 7px #dddddd;
+  margin-bottom: 2%;
 }
   
 h1,
@@ -90,9 +91,13 @@ footer {
 
 /* gif-tastic */
 
+#title {
+  text-align: center;
+}
+
 .btn {
-  margin-right: 2%;
-  margin-bottom: 2%;
+  margin-right: 1%;
+  margin-bottom: 1%;
 }
 
 form {
