--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,65 @@
 body {
-  background: url("../images/seigaiha.png");
-  height: 100%;
+    background-image: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: 100% 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-  
-/* general */
-  
-.main-container {
-  min-height: 100vh; 
-  overflow: hidden;
-  display: block;
-  position: relative;
-  padding-bottom: 125px;
-}
-  
-.container {
-  border-radius: 7px;
-  background-color: #ffffff;
-  padding: 2%;
-  padding: 10px;
-  box-shadow: 4px 7px #dddddd;
-  margin-bottom: 2%;
-}
-  
-h1,
-h2,
-h3,
-p {
-  margin-bottom: 20px;
-}
-  
-p {
-  color: #343a40;
-  margin-right: 3%;
-}
-    
-p:last-child {
-  margin-bottom: 0;
-}
-    
-h1,
-h2,
-h3 {
-  font-weight: 650;
-  color: #0089cf;
-}
-    
+
 h1 {
-  padding-bottom: 20px;
-  font-size: 28px;
-  line-height: 49px;
-  border-bottom: 3px solid #dddddd;
+  color: coral;
+  font-size: 60px;
+  font-weight: bold;
+  font-family: 'Barriecito', cursive;
+  margin-top: 70px;
 }
-    
-h2,
-h3 {
-  font-size: 22px;
-}
-  
-/* navbar */
-  
-nav {
-  background-color: #0060a8;
-  border-bottom: 7px solid #cccccc;
-  margin-bottom: 50px;
-}
-  
-.navbar-brand {
-  border-radius: 4px;
-  background-color: #0089cf;
-  padding-right: 15px;
-  padding-left: 15px;
-  font-size: 28px;
-  font-weight: 650;
-}
-  
-/* footer */
-  
-footer {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #cccccc;
-  text-align: center;
-  border-top: 8px solid #0060a8;
-  height: 50px;
-}  
 
-/* gif-tastic */
+p {
+  font-family: 'Barriecito', cursive;
+  font-size: 20px;
+  color: white;
+}
 
-#title {
-  text-align: center;
+.container {
+  margin-bottom: 70px;
+}
+
+.ratings {
+  color: yellow;
+  font-family: 'Barriecito', cursive;
+  font-size: 20px;
+  margin-top: 20px;
 }
 
 .btn {
-  margin-right: 1%;
-  margin-bottom: 1%;
+  background: lightcoral;
+  color: white;
+  border-color: palevioletred;
+  font-weight: bold;
 }
 
-form {
+.btn-primary {
+  background: yellow;
+  color: olive;
+  border-color: olive;
+  font-weight: bold;
+  margin-right: 2%;
   margin-bottom: 2%;
 }
+
+#add {
+  font-family: 'Barriecito', cursive;
+  font-size: 20px;
+  color: white;
+}
+
+/* @media screen and (max-width: 480px) {
+  .movImage {
+      width: 500px;
+      height: 500px;
+  }
+} */
