--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 
 .links {
   text-align: right;
+  margin-right: 2%;
 }
 
 h1 {
@@ -19,7 +20,6 @@ h1 {
   font-size: 60px;
   font-weight: bold;
   font-family: 'Barriecito', cursive;
-  margin-top: 70px;
 }
 
 p {
@@ -28,9 +28,9 @@ p {
   color: white;
 }
 
-.container {
+/* .container {
   margin-bottom: 70px;
-}
+} */
 
 .ratings {
   color: yellow;
